objects/ssot__LoyaltyBenefitType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Benefit Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitCategoryId__c</fullName>
        <label>Loyalty Benefit Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramId__c</fullName>
        <label>Loyalty Program</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179108_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyBenefitType_LoyaltyProgramId__rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyBenefitType_LoyaltyProgramId__rel</relationshipLabel>
        <relationshipName>rel_1697761179108_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184122_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgram_Id_map_LoyaltyBenefit_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgram_Id_map_LoyaltyBenefit_rel</relationshipLabel>
        <relationshipName>rel_1697761184122_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009291362_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyBenefitType_LoyaltyProgramId__rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyBenefitType_LoyaltyProgramId__rel</relationshipLabel>
        <relationshipName>rel_1702009291362_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>